tests/ui/coloring/barrier_indirect_tid.stderr
error[RX3003]: `block.sync()` is not uniformly reachable: called inside a thread-id-dependent branch (requires `unsafe`)
 --> $DIR/coloring/barrier_indirect_tid.rx:5:9
  |
5 |         t.sync(); //~ ERROR RX3003
  |         ^^^^^^^^ barrier inside a thread-id-dependent branch
